RESOLVED FIXED 34738
[BREWMP] Fix macro redefinition error in BREWMP simulator build.
https://bugs.webkit.org/show_bug.cgi?id=34738
Summary [BREWMP] Fix macro redefinition error in BREWMP simulator build.
Kwang Yul Seo
Reported 2010-02-08 19:10:21 PST
Remove warning: 'FAR' macro redefinition.
Attachments
Patch (1.10 KB, patch)
2010-02-08 19:13 PST, Kwang Yul Seo
no flags
Kwang Yul Seo
Comment 1 2010-02-08 19:13:02 PST
Laszlo Gombos
Comment 2 2010-02-08 20:19:01 PST
Comment on attachment 48383 [details] Patch LGTM.
WebKit Commit Bot
Comment 3 2010-02-09 01:35:09 PST
Comment on attachment 48383 [details] Patch Clearing flags on attachment: 48383 Committed r54537: <http://trac.webkit.org/changeset/54537>
WebKit Commit Bot
Comment 4 2010-02-09 01:35:15 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.