2010-02-09  Kwang Yul Seo  <skyul@company100.net>

Reviewed by Laszlo Gombos.

        [BREWMP] Fix macro redefinition error in BREWMP simulator build.
        https://bugs.webkit.org/show_bug.cgi?id=34738

        Remove warning: 'FAR' macro redefinition.

        * platform/image-decoders/jpeg/JPEGImageDecoder.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@54537 bbb929c8-8fbe-4397-9dbb-9b2b20218538